directus/k8s/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus-deployment
  namespace: directus
  labels:
    app: directus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
      containers:
        - name: directus
          image: directus/directus:12.0.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8055
          volumeMounts:
            - name: uploads
              mountPath: /directus/uploads
            - name: extensions
              mountPath: /directus/extensions

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: directus-uploads-pvc
        - name: extensions
          persistentVolumeClaim:
            claimName: directus-extensions-pvc
