directus/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus-svc
  namespace: directus
  labels:
    app: directus
spec:
  selector:
    app: directus
  ports:
    - port: 8055
      targetPort: 8055
