directus/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: directus-http-route
  namespace: directus
spec:
  # 引用公共网关
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
  hostnames:
    - "directus.domain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: CORS
          cors:
            allowOrigins:
              - "oyea.eu.org"
              - "*.oyea.eu.org"
            allowMethods:
              - GET
              - OPTIONS
            allowHeaders:
              - Content-Type
              - Authorization
            allowCredentials: true
            maxAge: 86400
      backendRefs:
        - name: directus-svc
          port: 8055
